Under the hood changes in order to improve readability and make fixing errors easier

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,29 +1,4 @@
-.header{
-	margin-top: -5%; 
-	width: auto;
-	height: 20%;
-	background: rgba(125,0,0,.5);
-	
-}
-.title{
-	font-family: Bellerose;
-	color: white;
-	text-align: center;
-	font-size: 4em;
-}
-.body{
-	font-family: Bellerose;
-	color: white;
-	text-align: center;
-	font-size: 2em;
-}
-
-.bodyBlack{
-	font-family: Bellerose;
-	color: black;
-	text-align: center;
-	font-size: 2em;
-}
+/* Global Changes here */
 
 body{
 	margin:0;
@@ -32,6 +7,17 @@ body{
 	
 }
 
+/* To fit the images into their contain div */
+img {
+  display: inline-block;
+  vertical-align: middle;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+/*Custom stuff here, such as fonts */
+
+/*Custom font so webpages use this even if its not suer installed */
 @font-face{
 	font-family: Bellerose;
 	src:url(fonts/Bellerose.ttf);
@@ -39,7 +25,9 @@ body{
 	font-size: 12px;
 }
 
-.links{
+/* Classes */
+/* used to display elements in a row at a certain size */
+.links {
 	margin-top: 40px;
 	margin-left: 20%;
 	width: 100px;
@@ -48,44 +36,70 @@ body{
 	display: inline-block;
 	border-radius: 10px;
 }
-img {
-  display: inline-block;
-  vertical-align: middle;
-  max-height: 100%;
-  max-width: 100%;
+
+/*Handles short segments of slightly larger text */
+.body{
+	font-family: Bellerose;
+	color: white;
+	text-align: center;
+	font-size: 2em;
 }
 
-.box{
-	height: 20em;
-	width: 20em;
-	display: inline-block;
-}
-
+/* Will be using .paragraph later on , only 1 use currently, Handles larger segments of text that need to be smaller in size */
 .paragraph{
-	float: left;
-	
+	float: left;	
 	font-family: Bellerose;
 	font-size: 18px;
 	color: black;
 	width: 50em;
 	height: 10em;
-	
 	display: inline-block;
 	margin-left: 2em;
 }
 
-.aboutMe{
+/* Single Target CSS */
+
+#header{
+	margin-top: -5%; 
+	width: auto;
+	height: 20%;
+	background: rgba(125,0,0,.5);
+	
+}
+
+#title{
+	font-family: Bellerose;
+	color: white;
+	text-align: center;
+	font-size: 4em;
+}
+
+#bodyBlack{
+	font-family: Bellerose;
+	color: black;
+	text-align: center;
+	font-size: 2em;
+}
+
+#box{
+	height: 20em;
+	width: 20em;
+	display: inline-block;
+}
+
+#aboutMe{
 	background-color: white;
 	width: 100%;
 	height: 27em;
 	display: inline-block;
 }
 
-#special{
+/* To fix placement of the android logo on the page */
+#special {
 	margin-right: 5em;
 	height: 16em;
 	width: 16em;
 	display: inline-block;
 	float: left;
-
 }
+
